# SourceCode

./: README.md
MAGIC/magic-fw/hardware/inudev_camera/: CMakeLists.txt  package.xml
MAGIC/magic-fw/hardware/lslidar_ros/: README.md
MAGIC/magic-fw/hardware/pc_filter/: CMakeLists.txt  package.xml
MAGIC/magic-fw/hardware/pc_filter/launch/: run.launch
MAGIC/magic-fw/hardware/pc_filter/src/: pc_node.cpp
MAGIC/magic-fw/navigation/robot_pose_ekf/: CMakeLists.txt
MAGIC/magic-fw/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
MAGIC/magic-fw/recharge_controller/: package.xml
MAGIC/magic-fw/recharge_controller/src/: main.cpp  recharge_controller.cpp
MAGIC/magic-fw/regulated_pure_pursuit_controller/src/: regulated_pure_pursuit_controller.cpp
MAGIC/magic-fw/ros_backend_interface/src/: ros_backend_interface.cpp
MAGIC/magic-fw/yhs_can_control/launch/: yhs_can_control_bringup.launch  yhs_can_control_bringup_carto.launch
MAGIC/magic-fw/yhs_can_control/src/: yhs_can_control.cpp
MAGIC/magic-fw/yhs_msgs/: CMakeLists.txt
MAGIC/magic-fw/yhs_msgs/msg/: FrChassisInfoFb.msg  FwChassisInfoFb.msg  SetCostmaps.msg
MAGIC/magic-fw/yhs_nav/launch/: c2.pgm  c2.yaml  cartographer.launch  navigation_test.launch  teb_move_base.launch
MAGIC/magic-fw/yhs_nav/map/: c1.yaml  c2.yaml
MAGIC/magic-fw/yocs_velocity_smoother/src/: velocity_smoother_nodelet.cpp
MAGIC/magic-mk/hardware/ascamera_listener/: CMakeLists.txt
MAGIC/magic-mk/navigation/move_base/: CMakeLists.txt  package.xml
MAGIC/magic-mk/navigation/teb_local_planner/: package.xml
MAGIC/magic-mk/pointcloud_to_laserscan/: CMakeLists.txt  package.xml
MAGIC/magic-mk/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan.launch
MAGIC/magic-mk/pointcloud_to_laserscan/src/: pcltran.cpp  pointcloud_to_laserscan_nodelet.cpp  scan.cpp
MAGIC/magic-mk/recharge_controller/launch/: recharge_controller.launch
MAGIC/magic-mk/recharge_controller/src/: recharge_controller_copy.cpp
MAGIC/magic-mk/regulated_pure_pursuit_controller/: regulated_pure_pursuit_controller.xml
MAGIC/magic-mk/regulated_pure_pursuit_controller/src/: regulated_pure_pursuit_controller.cpp
MAGIC/magic-mk/ros_backend_interface/launch/: run.launch
MAGIC/magic-mk/src/recharge_controller/: CMakeLists.txt
MAGIC/magic-mk/src/recharge_controller/include/recharge_controller/: recharge_controller.h
MAGIC/magic-mk/src/recharge_controller/src/: recharge_controller_copy.cpp
MAGIC/magic-mk/src/regulated_pure_pursuit_controller/: package.xml
MAGIC/magic-mk/src/yhs_can_control/: package.xml
MAGIC/magic-mk/src/yhs_nav/: package.xml
MAGIC/magic-mk/yhs_can_control/: CMakeLists.txt
MAGIC/magic-mk/yhs_can_control/launch/: yhs_can_control.launch
MAGIC/magic-mk/yhs_msgs/: CMakeLists.txt
MAGIC/magic-mk/yhs_msgs/msg/: FrChassisInfoFb.msg  MkChassisInfoFb.msg
MAGIC/magic-mk/yhs_msgs/srv/: DisRecharge.srv  PathIsValid.srv
MAGIC/magic-mk/yhs_nav/: CMakeLists.txt
MAGIC/magic-mk/yhs_nav/launch/: navigation_test.launch
MAGIC/magic-mk/yhs_nav/map/: c1.yaml
MAGIC/magic-mk/yocs_velocity_smoother/: CMakeLists.txt  package.xml
MAGIC/magic-mk/yocs_velocity_smoother/launch/: standalone.launch
MAGIC/magic-mk/yocs_velocity_smoother/param/: standalone.yaml
MAGIC/magic-mk/yocs_velocity_smoother/src/: velocity_smoother_nodelet.cpp
MAGIC/nv-magic-navigation/src/ros_backend_interface/: CMakeLists.txt
MAGIC/nv-magic-navigation/src/ros_backend_interface/include/ros_backend_interface/: ros_backend_interface.h
MAGIC/nv-magic-navigation/src/ros_backend_interface/src/: main.cpp  ros_backend_interface.cpp
MAGIC/nv-magic-navigation/src/sensor_tf/: CMakeLists.txt  package.xml
MAGIC/nv-magic-navigation/src/sensor_tf/launch/: run.launch
MAGIC/nv-magic-navigation/src/sensor_tf/src/: sensor_tf_node.cpp
MAGIC/nv-magic-navigation/src/yhs_can_control/: CMakeLists.txt  package.xml
MAGIC/nv-magic-navigation/src/yhs_msgs/: CMakeLists.txt
MAGIC/regulated_pure_pursuit_controller/include/regulated_pure_pursuit_controller/: regulated_pure_pursuit_controller.h
MAGIC/regulated_pure_pursuit_controller/src/: regulated_pure_pursuit_controller.cpp
MAGIC/ros_backend_interface/: CMakeLists.txt  package.xml
MAGIC/ros_backend_interface/include/ros_backend_interface/: ros_backend_interface.h
MAGIC/ros_backend_interface/src/: ros_backend_interface.cpp
MOTION_PLANNING/ros-navigation-noetic/amcl/src/: amcl_node.cpp
MOTION_PLANNING/ros-navigation-noetic/clear_costmap_recovery/src/: clear_costmap_recovery.cpp
MOTION_PLANNING/ros-navigation-noetic/costmap_2d/plugins/: inflation_layer.cpp  obstacle_layer.cpp  static_layer.cpp
MOTION_PLANNING/ros-navigation-noetic/costmap_2d/src/: costmap_2d_ros.cpp  observation_buffer.cpp
MOTION_PLANNING/ros-navigation-noetic/global_planner/src/: astar.cpp  grid_path.cpp  orientation_filter.cpp  planner_core.cpp
MOTION_PLANNING/ros-navigation-noetic/map_server/src/: image_loader.cpp  main.cpp
MOTION_PLANNING/ros-navigation-noetic/move_base/src/: move_base.cpp
MOTION_PLANNING/ros-navigation-noetic/move_slow_and_clear/src/: move_slow_and_clear.cpp
MOTION_PLANNING/ros-navigation-noetic/rotate_recovery/src/: rotate_recovery.cpp
MOTION_PLANNING/ros-navigation-noetic/teb_local_planner-noetic-devel/: teb_local_planner_params.yaml
MOTION_PLANNING/ros-navigation-noetic/teb_local_planner-noetic-devel/src/: optimal_planner.cpp  teb_local_planner_ros.cpp
ROS_PACKAGES/pointcloud_to_laserscan/include/pointcloud_to_laserscan/: pointcloud_to_laserscan_nodelet.h
ROS_PACKAGES/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
ROS_PACKAGES/recharge_controller_fw/: CMakeLists.txt  package.xml
ROS_PACKAGES/recharge_controller_fw/src/: main.cpp  recharge_controller.cpp
ROS_PACKAGES/recharge_controller_fw/teb_local_planner/: CMakeLists.txt  package.xml
ROS_PACKAGES/yhs_bringup_mk/yhs_can_control/src/: yhs_can_control.cpp
ROS_PACKAGES/yhs_bringup_mk/yhs_can_msgs/: CMakeLists.txt
SLAM/: readme.md
pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
ros-navigation-noetic/: DXSREADME.md
(+208 files in other folders)
